# nexus

./: .gitignore  README.md  TEST_RESULTS.md  abb.repos  generate_endpoints.sh  nexus.repos  nexus_endpoints.redf.yaml  nexus_tree_nodes.xml  rmf.repos  test_components.md  thirdparty.repos
nexus_calibration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nexus_calibration/config/: sample_config.yaml
nexus_calibration/src/: calibration_node.cpp  calibration_node.hpp
nexus_calibration/test/: nexus_calibration.launch.py  test_config.yaml  test_world.world
nexus_capabilities/: CHANGELOG.rst  CMakeLists.txt  package.xml
nexus_capabilities/src/: context.cpp  context_test.cpp
nexus_common/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nexus_common/src/: action_client_bt_node_test.cpp  batch_service_call_test.cpp  bt_store.cpp  error_test.cpp  logging.cpp  logging_test.cpp  main_test.cpp  node_thread.cpp  node_utils.cpp  pausable_sequence.cpp  pausable_sequence_test.cpp  service_client_bt_node_test.cpp  sync_ros_client_test.cpp  task_remapper.cpp  task_remapper_test.cpp  test_utils.cpp
nexus_demos/: CHANGELOG.rst  CMakeLists.txt  README.md  mock_plugins.xml  package.xml  test_invalid_place_on_conveyor.py  test_parallel_duplicated_wo.py  test_parallel_pick_and_place_rmf.py  test_parallel_pick_and_place_rmf.py.disabled  test_parallel_wo.py  test_pick_and_place.py  test_pick_and_place_rmf.py  test_pick_and_place_rmf.py.disabled
nexus_demos/config/: abb_irb910sc_controllers.yaml  abb_irb910sc_planner_params.yaml  assemble.json  mock_detector_config.yaml  pick_and_place.json  pick_and_place.yaml  pick_and_place_amr.json  pick_and_place_conveyor.json  pick_and_place_rmf.json  pick_from_conveyor.json  pick_from_conveyor.yaml  place_on_conveyor.json  place_on_conveyor.yaml  product_detector_config.yaml  workcell_1_io_config.yaml  workcell_2_io_config.yaml  workcell_task.yaml
nexus_demos/launch/: depot.launch.xml  inter_workcell.launch.py  launch.py  office.launch.xml  rmf_transporter.launch.xml  workcell.launch.py  workcell_1_tf.launch.py  workcell_2_tf.launch.py  zenoh_bridge.launch.py  zenoh_router.launch.py
nexus_demos/rviz/: nexus_panel.rviz  nexus_panel_rmf.rviz
nexus_demos/scripts/: activate_node.py
nexus_demos/src/: mock_detector.cpp  mock_detector.hpp  mock_emergency_alarm.cpp  mock_gripper.cpp  mock_gripper.hpp  mock_printer.cpp  rmf_task_canceller.cpp  rmf_task_canceller.hpp  test_mock_detection.cpp  test_mock_detector.cpp  test_mock_gripper.cpp
nexus_demos/test/: main.cpp
nexus_endpoints/: CHANGELOG.rst  CMakeLists.txt  nexus_endpoints.hpp  package.xml
nexus_gazebo/: CHANGELOG.rst  CMakeLists.txt  nexus_gazebo_gazebo_paths.dsv.in  package.xml
nexus_gazebo/src/: MotionCaptureRigidBody.cc  MotionCaptureSystem.cc
nexus_gazebo/worlds/: example.sdf
nexus_integration_tests/: CHANGELOG.rst  CMakeLists.txt  README.md  managed_process.py  models_from_fuel.txt  nexus_test_case.py  package.xml  ros_testcase.py  test_parallel_wo.py  test_pick_and_place.py  test_pick_and_place_rmf.py
nexus_integration_tests/config/: abb_irb1300_controllers.yaml  abb_irb1300_planner_params.yaml  pick_from_conveyor.json
nexus_integration_tests/launch/: common.launch.xml  control_center.launch.py  depot.launch.xml  inter_workcell.launch.py  launch.py  office.launch.xml  rmf_transporter.launch.xml  workcell.launch.py  zenoh_bridge.launch.py
nexus_integration_tests/src/: mock_detection.cpp  mock_detection.hpp  mock_gripper.cpp  mock_gripper.hpp  mock_printer.cpp  mock_transporter.cpp  test_mock_detection.cpp  test_mock_gripper.cpp
nexus_integration_tests/templates/: depot_world.sdf
nexus_lifecycle_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
nexus_lifecycle_manager/launch/: lifecycle_manager.launch.py
nexus_lifecycle_manager/src/: lifecycle_manager_client.cpp  lifecycle_manager_node.cpp  main.cpp
nexus_lifecycle_manager/test/: test_lifecycle_manager.cpp
nexus_motion_planner/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nexus_motion_planner/config/: planner_params.yaml  planner_params_with_cache.yaml
nexus_motion_planner/launch/: demo_planner_server.launch.py
nexus_motion_planner/src/: main.cpp  motion_plan_cache.cpp  motion_plan_cache.hpp  motion_planner_server.cpp  motion_planner_server.hpp  motion_planner_server_component.cpp  test_motion_plan_cache.cpp  test_request.cpp
nexus_motion_planner/test/: test_motion_plan_cache.py  test_request.test.py  test_request_with_cache.test.py
nexus_network_configuration/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
nexus_network_configuration/nexus_network_configuration/: nexus_network_configuration.py
nexus_network_configuration/schemas/: nexus_network_schema.json
nexus_network_configuration/scripts/: set_up_network.sh
nexus_robot_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nexus_robot_controller/config/: test_abb_irb910sc_controllers.yaml  test_ur5e_controllers.yaml
nexus_robot_controller/launch/: rrbot_demo.launch.py
nexus_robot_controller/src/: robot_controller_server.cpp  robot_controller_server_component.cpp  robot_controller_server_node.cpp
nexus_robot_controller/test/: abb_irb910sc_test_params.yaml  robot_controller_abb_irb910sc.test.py  robot_controller_ur5e.test.py
nexus_rviz_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins_description.xml
nexus_rviz_plugins/src/: nexus_panel.cpp
nexus_system_orchestrator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nexus_system_orchestrator/src/: add_metadata.cpp  add_metadata.hpp  add_task_assignments_to_metadata.cpp  add_task_assignments_to_metadata.hpp  assign_transporter_workcell.cpp  assign_transporter_workcell.hpp  bid_transporter.cpp  (+29 more)
nexus_transporter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nexus_visualization/: CMakeLists.txt  package.xml
nexus_workcell_editor/: CHANGELOG.rst  Cargo.toml  README.md  package.xml
nexus_workcell_orchestrator/: CHANGELOG.rst  CMakeLists.txt  DEVELOPERS.md  README.md  package.xml
(+302 files in other folders)
