<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_calibration</name>
  <version>0.1.1</version>
  <description>A package with ROS 2 nodes for calibration workcell components</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>nexus_endpoints</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>vrpn</depend>

  <test_depend>nexus_gazebo</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
