<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_common</name>
  <version>0.1.1</version>
  <description>Common code shared by NEXUS packages</description>
  <maintainer email="koonpeng@openrobotics.org">Teo Koon Peng</maintainer>
  <license>Apache License 2.0</license>

  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>yaml-cpp</depend>

  <build_depend>nexus_cmake</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>rmf_utils</test_depend>
  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
