<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_demos</name>
  <version>0.0.0</version>
  <description>Launch files for Nexus demos</description>
  <maintainer email="lucadv@intrinsic.ai">Luca Della Vedova</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>rmf_visualization</exec_depend>
  <exec_depend>nexus_visualization</exec_depend>

  <exec_depend>rmf_building_map_tools</exec_depend>

  <exec_depend>rmf_demos_fleet_adapter</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>launch_xml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
