<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_demos</name>
  <version>0.1.1</version>
  <description>Demo package containing system and workcell orchestrators</description>
  <maintainer email="koonpeng@openrobotics.org">Teo Koon Peng</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>nexus_endpoints</build_depend>
  <build_depend>nexus_network_configuration</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>backward_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nexus_orchestrator_msgs</depend>
  <depend>nexus_transporter</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_task_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>rmw_cyclonedds_cpp</depend>

  <exec_depend>abb_bringup</exec_depend>
  <exec_depend>abb_irb1300_support</exec_depend>
  <exec_depend>abb_irb1300_10_115_moveit_config</exec_depend>
  <exec_depend>abb_irb910sc_support</exec_depend>
  <exec_depend>abb_irb910sc_3_45_moveit_config</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <!-- Nexus dependencies. -->
  <exec_depend>nexus_capabilities</exec_depend>
  <exec_depend>nexus_motion_planner</exec_depend>
  <exec_depend>nexus_rviz_plugins</exec_depend>
  <exec_depend>nexus_system_orchestrator</exec_depend>
  <exec_depend>nexus_workcell_orchestrator</exec_depend>
  <exec_depend>nexus_zenoh_bridge_dds_vendor</exec_depend>

  <!-- Open-RMF dependencies. -->
  <exec_depend>rmf_building_map_tools</exec_depend>
  <exec_depend>rmf_demos_fleet_adapter</exec_depend>
  <exec_depend>rmf_building_sim_gz_plugins</exec_depend>
  <exec_depend>rmf_robot_sim_gz_plugins</exec_depend>
  <exec_depend>rmf_task_ros2</exec_depend>
  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>rmf_visualization</exec_depend>

  <!-- Simulation dependencies. -->
  <exec_depend>gz_sim_vendor</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>rcpputils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
