<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_endpoints</name>
  <version>0.1.0</version>
  <description>NEXUS</description>
  <maintainer email="koonpeng@openrobotics.org">Teo Koon Peng</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>nexus_alarm_msgs</depend>
  <depend>nexus_calibration_msgs</depend>
  <depend>nexus_detector_msgs</depend>
  <depend>nexus_dispenser_msgs</depend>
  <depend>nexus_motion_planner_msgs</depend>
  <depend>nexus_orchestrator_msgs</depend>
  <depend>nexus_transporter_msgs</depend>
  <depend>trajectory_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
