<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_gazebo</name>
  <version>0.1.1</version>
  <description>Nexus gazebo simulation assets</description>

  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>

  <author email="michael@openrobotics.org">Michael Carroll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>rclcpp</depend>
  <depend>vrpn</depend>

  <depend>gz_sim_vendor</depend>
  <depend>gz_math_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
